--- a/travel/index.html
+++ b/travel/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>极简旅游网站首页布局</title>
+    <title>运维部个人简介网页展示</title>
   </head>
   <body>
     <div class="container">
@@ -13,7 +13,7 @@
         <img src="img/logo.png" class="logo" />
         <nav>
           <ul>
-            <li><a href="#">HOME</a></li>
+            <li><a href="../myinfo.html">HOME</a></li>
             <li><a href="#">REGION</a></li>
             <li><a href="#">ABOUT</a></li>
           </ul>
