调整图片和显示

--- a/travel/index.html
+++ b/travel/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class="navbar">
-        <img src="img/logo.png" class="logo" />
+        <img src="img/xjj.png" class="logo" />
         <nav>
           <ul>
             <li><a href="../myinfo.html">HOME</a></li>
@@ -22,31 +22,35 @@
       </div>
       <div class="row">
         <div class="col">
-          <h1>Sahara</h1>
+          <h1>完成你的第一个个人展示页</h1>
           <p>
-            Until 2020, no other member state of the United Nations had ever officially recognized Moroccan sovereignty over parts of Western Sahara.[14][15][16] In 2020, the United States recognized Moroccan sovereignty over Western Sahara in exchange for Moroccan normalization of relations with
-            Israel.
+            在技术的广袤星空中，愿每位成员皆能成为追光者!<br />以代码为笔，以数据为墨，绘就绚烂星河，迈向技术巅峰。
           </p>
-          <button type="button">Explore</button>
+          <button type="button" class="rateBtn">去评价</button>
         </div>
         <div class="col">
           <div class="card1 card">
-            <h5>Western Desert</h5>
-            <p>no other member state of the United Nations had ever officially recognized</p>
+            <a href="http://www.baidu.com"></a>
+            <h5>冯浩</h5>
           </div>
           <div class="card2 card">
-            <h5>AI Bagawat</h5>
-            <p>no other member state of the United Nations had ever officially recognized</p>
+            <h5>韩文龙</h5>
           </div>
           <div class="card3 card">
-            <h5>Pyramid of Giza</h5>
-            <p>no other member state of the United Nations had ever officially recognized</p>
+            <h5>李轲</h5>
           </div>
           <div class="card4 card">
-            <h5>Kalahari Desert</h5>
-            <p>no other member state of the United Nations had ever officially recognized</p>
+            <h5>孙瑞阳</h5>
           </div>
-
+          <div class="card5 card">
+            <h5>徐杰宸</h5>
+          </div>
+          <div class="card6 card">
+            <h5>张超</h5>
+          </div>
+          <div class="card7 card">
+            <h5>郑昌龙</h5>
+          </div>
         </div>
       </div>
     </div>
