--- a/travel/index.html
+++ b/travel/index.html
@@ -13,15 +13,15 @@
         <img src="img/xjj.png" class="logo" />
         <nav>
           <ul>
-            <li><a href="../myinfo.html">HOME</a></li>
+            <!-- <li><a href="../myinfo.html">HOME</a></li>
             <li><a href="#">REGION</a></li>
-            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">ABOUT</a></li> -->
           </ul>
         </nav>
         <img src="img/menu.png" class="menu-icon" />
       </div>
       <div class="row">
-        <div class="col">
+        <div class="col1">
           <h1>完成你的第一个个人展示页</h1>
           <p>
             在技术的广袤星空中，愿每位成员皆能成为追光者!<br />以代码为笔，以数据为墨，绘就绚烂星河，迈向技术巅峰。
@@ -29,8 +29,7 @@
           <button type="button" class="rateBtn">去评价</button>
         </div>
         <div class="col">
-          <div class="card1 card">
-            <a href="http://www.baidu.com"></a>
+          <div class="card1 card" onclick="window.open('http://www.baidu.com')">
             <h5>冯浩</h5>
           </div>
           <div class="card2 card">
