--- a/travel/index.html
+++ b/travel/index.html
@@ -29,7 +29,7 @@
           <button type="button" class="rateBtn">去评价</button>
         </div>
         <div class="col">
-          <div class="card1 card" onclick="window.open('http://www.baidu.com')">
+          <div class="card1 card" onclick="window.open('../myinfo.html')">
             <h5>冯浩</h5>
           </div>
           <div class="card2 card">
