--- a/travel/index.html
+++ b/travel/index.html
@@ -29,10 +29,10 @@
           <button type="button" class="rateBtn">去评价</button>
         </div>
         <div class="col">
-          <div class="card1 card" onclick="window.open('../myinfo.html')">
+          <div class="card1 card" onclick="window.open('../myinfo.html','_self')">
             <h5>冯浩</h5>
           </div>
-          <div class="card2 card">
+          <div class="card2 card" onclick="window.open('www.baidu.com','_self')">
             <h5>韩文龙</h5>
           </div>
           <div class="card3 card">
