--- a/travel/index.html
+++ b/travel/index.html
@@ -26,10 +26,13 @@
           <p>
             在技术的广袤星空中，愿每位成员皆能成为追光者!<br />以代码为笔，以数据为墨，绘就绚烂星河，迈向技术巅峰。
           </p>
-          <img src="../travel/img/xjj.png" alt="二维码" id="qrCode">
-          <!-- <p id="hoverText">鼠标悬停此处显示二维码</p> -->
-          <button type="button" id="rateBtn" onclick="window.open('https://ktub1m.aliwork.com/o/test_web')">去评价</button>
+          <button type="button" class="rateBtn" onclick="window.open('https://ktub1m.aliwork.com/o/test_web')">去评价</button>
+          <br/>
+          <br/>
+          <img src="img/qrcode.png" width="100px" height="100px" style="margin-left: 30px;"/>
         </div>
+        
+        <div>
         <div class="col">
           <div class="card1 card" onclick="window.open('../myinfo.html','_self')">
             <h5>冯浩</h5>
