--- a/travel/index.html
+++ b/travel/index.html
@@ -29,7 +29,7 @@
           <button type="button" class="rateBtn" onclick="window.open('https://ktub1m.aliwork.com/o/test_web')">去评价</button>
           <br/>
           <br/>
-          <img src="img/qrcode.png" width="100px" height="100px" style="margin-left: 30px;"/>
+          <img src="img/qrcode.png" width="100px" height="100px" style="margin-left: 30px; border-radius: 5px;"/>
         </div>
         
         <div>
