--- a/team/index.html
+++ b/team/index.html
@@ -34,7 +34,7 @@
         
         <div>
         <div class="col">
-          <div class="card1 card" onclick="window.open('../myinfo.html','_self')">
+          <div class="card1 card" onclick="window.open('../fh/index.html','_self')">
             <h5>冯浩</h5>
           </div>
           <div class="card2 card" onclick="window.open('www.baidu.com')">
