--- a/team/index.html
+++ b/team/index.html
@@ -37,13 +37,13 @@
           <div class="card1 card" onclick="window.open('../fh/index.html','_self')">
             <h5>冯浩</h5>
           </div>
-          <div class="card2 card" onclick="window.open('www.baidu.com')">
+          <div class="card2 card" onclick="window.open('../hwl/index.html','_self')">
             <h5>韩文龙</h5>
           </div>
-          <div class="card3 card">
+          <div class="card3 card" onclick="window.open('../lk/personalProfile.html','_self')">
             <h5>李轲</h5>
           </div>
-          <div class="card4 card">
+          <div class="card4 card" onclick="window.open('../sry/sry.html','_self')">
             <h5>孙瑞阳</h5>
           </div>
           <div class="card5 card">
@@ -52,7 +52,7 @@
           <div class="card6 card">
             <h5>张超</h5>
           </div>
-          <div class="card7 card">
+          <div class="card7 card" onclick="window.open('../zcl/zcl.html','_self')">
             <h5>郑昌龙</h5>
           </div>
         </div>
