修改网页名称

--- a/team/index.html
+++ b/team/index.html
@@ -52,7 +52,7 @@
           <div class="card6 card">
             <h5>张超</h5>
           </div>
-          <div class="card7 card" onclick="window.open('../zcl/zcl.html','_self')">
+          <div class="card7 card" onclick="window.open('../zcl/index.html','_self')">
             <h5>郑昌龙</h5>
           </div>
         </div>
