--- a/team/index.html
+++ b/team/index.html
@@ -22,7 +22,7 @@
       </div>
       <div class="row">
         <div class="col1">
-          <h1>完成你的第一个个人展示页</h1>
+          <h1>完成你的个人展示吧</h1>
           <p>
             在技术的广袤星空中，愿每位成员皆能成为追光者!<br />以代码为笔，以数据为墨，绘就绚烂星河，迈向技术巅峰。
           </p>
