--- a/team/index.html
+++ b/team/index.html
@@ -49,7 +49,7 @@
           <div class="card5 card">
             <h5>徐杰宸</h5>
           </div>
-          <div class="card6 card">
+          <div class="card6 card onclick="window.open('../zc/zc.html','_self')">
             <h5>张超</h5>
           </div>
           <div class="card7 card" onclick="window.open('../zcl/index.html','_self')">
