--- a/team/index.html
+++ b/team/index.html
@@ -46,7 +46,7 @@
           <div class="card4 card" onclick="window.open('../sry/sry.html','_self')">
             <h5>孙瑞阳</h5>
           </div>
-          <div class="card5 card">
+          <div class="card5 card" onclick="window.open('../xjc/wangye.html','_self')">
             <h5>徐杰宸</h5>
           </div>
           <div class="card6 card" onclick="window.open('../zc/zc.html','_self')">
