--- a/team/index.html
+++ b/team/index.html
@@ -26,7 +26,7 @@
           <p>
             在技术的广袤星空中，愿每位成员皆能成为追光者!<br />以代码为笔，以数据为墨，绘就绚烂星河，迈向技术巅峰。
           </p>
-          <button type="button" class="rateBtn" onclick="window.open('https://ktub1m.aliwork.com/o/test_web')">去评价</button>
+          <button type="button" class="rateBtn" onclick="window.open('https://ktub1m.aliwork.com/s/test_web1')">去评价</button>
           <br/>
           <br/>
           <img src="img/qrcode.png" width="100px" height="100px" style="margin-left: 30px; border-radius: 5px;"/>
