修复图片加载

--- a/hwl/index.html
+++ b/hwl/index.html
@@ -104,10 +104,10 @@
     <section class="images">
         <h2 class="section-title">我的作品展示</h2>
         <!-- 使用本地图片路径 -->
-        <img src="file:///E:/py_vs/jieshao/1.jpg" alt="作品图1">
-        <img src="file:///E:/py_vs/jieshao/2.jpg" alt="作品图2">
-        <img src="file:///E:/py_vs/jieshao/3.jpg" alt="作品图3">
-        <img src="file:///E:/py_vs/jieshao/4.jpg" alt="作品图4">
+        <img src="1.jpg" alt="作品图1">
+        <img src="2.jpg" alt="作品图2">
+        <img src="3.jpg" alt="作品图3">
+        <img src="4.jpg" alt="作品图4">
     </section>
 
     <section>
