--- a/lk/personalProfile.html
+++ b/lk/personalProfile.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>李轲自我简介</title>
+  <title>李轲自我简介11</title>
   <style>
     /* 整体页面布局 */
     body {
