--- a/team/test1.html
+++ b/team/test1.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Button Click Example</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <div id="postList"></div>
