--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello World
+<!doctype html>
+<html lang="">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="icon" href="/favicon.ico">
+    <title>tv</title>
+    <script defer="defer" src="/chunk-vendors.1745379858440.js"></script>
+    <script defer="defer" src="/app.1745379858440.js"></script>
+    <link href="/css/chunk-vendors.77da1899.css" rel="stylesheet">
+    <link href="/css/app.2b52742a.css" rel="stylesheet">
+</head>
+
+<body><noscript><strong>We're sorry but tv doesn't work properly without JavaScript enabled. Please enable it to
+            continue.</strong></noscript>
+    <div id="app"></div>
+</body>
+
+</html>
