--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/bigscreen/favicon.ico"><title>tv</title><script defer="defer" src="/bigscreen/js/chunk-vendors.03b40a4e.js"></script><script defer="defer" src="/bigscreen/js/app.49b420b5.js"></script><link href="/bigscreen/css/chunk-vendors.77da1899.css" rel="stylesheet"><link href="/bigscreen/css/app.2b52742a.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but tv doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+<!doctype html>
+<html lang="">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="icon" href="/bigscreen/favicon.ico">
+    <title>tv</title>
+    <script defer="defer" src="/bigscreen/js/chunk-vendors.03b40a4e.js"></script>
+    <script defer="defer" src="/bigscreen/js/app.49b420b5.js"></script>
+    <link href="/bigscreen/css/chunk-vendors.77da1899.css" rel="stylesheet">
+    <link href="/bigscreen/css/app.2b52742a.css" rel="stylesheet">
+</head>
+
+<body><noscript><strong>We're sorry but tv doesn't work properly without JavaScript enabled. Please enable it to
+            continue.</strong></noscript>
+    <div id="app"></div>
+</body>
+
+</html>
